# c-pacman

./: build.sh  meson.build
src/: main.c
